<resources>
    <string name="app_name">ATX88 Test</string>
    <string name="app_regist_device_name">Đăng ký thiết bị</string>
    <string name="discover_device_name">Tìm Thiết Bị</string>
    <string name="menu_connect_new_device">Kết Nối Thiết Bị Mới</string>
    <string name="menu_connect_last_device">Kết Nối Thiết Bị Cuối</string>
    <string name="menu_discoverable_bluetooth">Dò Tìm Thiết Bị</string>
    <string name="title_activity_main2">Quét mã RFID</string>
    <string name="menu_connect">Kết Nối</string>
    <string name="menu_disconnect">Ngắt Kết Nối</string>
    <string name="menu_delete">Xóa</string>
    <string name="app_version">Phiên bản phần mềm</string>
    <string name="firmware_version">phiên bản firmware</string>
    <string name="device_name">Tên Thiết Bị</string>
    <string name="device_address">Địa chỉ thiết bị</string>
    <string name="device_battery">Dung lượng pin còn lại của thiết bị</string>
    <string name="find_product">Tìm mã sản phẩm</string>
    <string name="action_new_device">Thiết Bị Mới</string>
    <string name="action_scan_device">Dò tìm thiết bị</string>
    <string name="action_start">Bắt Đầu</string>
    <string name="action_read">Đọc</string>
    <string name="action_cancel">Đóng</string>
    <string name="action_write">Ghi</string>
    <string name="action_lock">Khóa</string>
    <string name="action_unlock">Mở Khóa</string>
    <string name="action_permalock">Perma</string>
    <string name="action_stop">Dừng</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_back">Trở Lại</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="action_clear">Xóa</string>
    <string name="action_mask">Mask</string>
    <string name="action_load">Tải</string>
    <string name="action_save">Lưu</string>
    <string name="action_edit">Chỉnh Sửa</string>
    <string name="action_remove">Gỡ Bỏ</string>
    <string name="action_default">Mặc Định</string>
    <string name="action_set_password">Đặt Mật Khẩu</string>
    <string name="action_setting">Cài Đặt</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_wlan">WLAN</string>
    <string name="paired_device">Thiết Bị Đã Ghép Nối</string>
    <string name="registed_device">Thiết Bị Đã Đăng Ký</string>
    <string name="new_device">Thiết Bị Mới</string>
    <string name="view_inventory">Kho</string>
    <string name="view_stored_data">Stored Data</string>
    <string name="view_read_memory">Đọc Bộ Nhớ</string>
    <string name="view_write_memory">Ghi Bộ NHớ</string>
    <string name="view_lock_memory">Khóa Bộ Nhớ</string>
    <string name="view_rfid_option">Tùy chọn thẻ RFID</string>
    <string name="title_error">Lỗi</string>
    <string name="title_system_error">Lỗi Hệ Thống</string>
    <string name="title_bt_error">Bluetooth Error</string>
    <string name="title_log_level">Log Level</string>
    <string name="title_system">Hệ Thống</string>
    <string name="title_bt">Bluetooth</string>
    <string name="title_wifi">WIFI</string>
    <string name="title_rfid_option">Tùy chọn thẻ RFID</string>
    <string name="title_barcode_option">Tùy Chọn Barcode</string>
    <string name="title_select_mask_6c">Chọn mặt nạ 6c</string>
    <string name="title_select_mask_6c_item">Select Mask Item</string>
    <string name="title_symbol_state">Symbologies State</string>
    <string name="title_select_mask">Chọn mặt nạ</string>
    <string name="title_write_tag">Write to tag</string>
    <string name="msg_not_support_bt">Thiết bị này không hỗ trợ Bluetooth. Vui lòng kiểm tra lại.</string>
    <string name="msg_not_support_wifi">Thiết bị này không hỗ trợ WIFI. Vui lòng kiểm tra lại.</string>
    <string name="msg_not_support_bt_or_wifi">Ứng dụng chỉ hỗ trợ Bluetooth hoặc WIFI. Vui lòng kiểm tra lại.</string>
    <string name="msg_not_connect_wifi">WIFI chưa được kết nối với AP. Vui lòng kiểm tra lại.</string>
    <string name="msg_turn_on_wifi">WIFI chưa được mở. Bạn có muốn mở WIFI?</string>
    <string name="msg_initialize_view">Đang Cài Đặt. Vui Lòng Chờ.</string>
    <string name="msg_success">Thành Công</string>
    <string name="msg_read_memory">Đang đọc thẻ dữ liệu. Vui lòng Chờ.</string>
    <string name="msg_fail_read_tag">Không thể đọc thẻ dữ liệu.</string>
    <string name="msg_write_memory">Đang ghi vào thẻ dữ liệu. Vui lòng Chờ.</string>
    <string name="msg_fail_write_tag">Không thể ghi vào thẻ dữ liệu.</string>
    <string name="msg_lock_memory">Đang tìm thẻ dữ liệu. Vui lòng Chờ.</string>
    <string name="msg_fail_lock_tag">Không thể khóa thẻ dữ liệu.</string>
    <string name="msg_unlock_memory">Đang mở khóa thẻ dữ lệu. Vui lòng chờ.</string>
    <string name="msg_fail_unlock_tag">Không thể mở khóa thẻ dữ liệu.</string>
    <string name="msg_permalock_memory">Permalocking the tag. Vui lòng chờ.</string>
    <string name="msg_fail_permalock_tag">Could not permalock tag.</string>
    <string name="msg_set_password">Đang cài đặt mật khẩu cho thẻ dữ liệu. Vui lòng chờ.</string>
    <string name="msg_fail_set_password">Không thể đặt mật khẩu cho thẻ dữ liệu.</string>
    <string name="msg_loading_select_mask">Loading select mask. Vui lòng chờ.</string>
    <string name="msg_saving_select_mask">Saving select mask. Vui lòng chờ.</string>
    <string name="msg_load_stored_data">Loading Stored Data. Vui lòng chờ.</string>
    <string name="msg_remove_stored_data">Xóa tất cả dữ liệu trong kho. Vui lòng chờ.</string>
    <string name="msg_fail_stop_action">Không thể dừng hành động</string>
    <string name="msg_fail_start_inventory">Không thể bắt đầu kiểm kê</string>
    <string name="msg_fail_start_decode">Không thể bắt đầu giải mã</string>
    <string name="msg_fail_start_read_memory">Không thể bắt đầu đọc bộ nhớ</string>
    <string name="msg_fail_start_write_memory">Không thể bắt đầu ghi bộ nhớ</string>
    <string name="msg_fail_start_lock">Không thể bắt đầu khóa bộ nhớ</string>
    <string name="msg_fail_start_unlock">Không thể bắt đầu mở khóa bộ nhớ</string>
    <string name="msg_fail_start_permalock">Không thể bắt đầu bộ nhớ permalock</string>
    <string name="msg_fail_start_set_password">Không thể bắt đầu đặt mật khẩu</string>
    <string name="msg_set_select_mask">Bạn có muốn đặt dữ liệu đã chọn làm mặt nạ không?</string>
    <string name="msg_write_tag">Bạn có muốn ghi dữ liệu mã vạch đã chọn vào thẻ RFID không?</string>
    <string name="msg_question_disable_select_mask">Bạn có chắc chắn muốn tắt Mặt nạ Lựa chọn?</string>
    <string name="msg_disable_select_mask">Mặt nạ lựa chọn bị vô hiệu hóa.</string>
    <string name="msg_fail_disable_select_mask">Không thể tắt Mặt nạ lựa chọn.</string>
    <string name="msg_fail_load_reader_instance">Không thể lấy Instance Reader.</string>
    <string name="msg_fail_load_rfid_reader_instance">Không thể lấy Rfid Reader Instance.</string>
    <string name="msg_fail_load_disabled_action_key">Không thể tắt khóa hành động.</string>
    <string name="msg_fail_load_rfid_global_band">Không thể tải băng tần toàn cầu.</string>
    <string name="msg_fail_save_rfid_global_band">Không thể lưu băng tần toàn cầu.</string>
    <string name="msg_fail_load_rfid_power_gain">Không thể tải mức công suất.</string>
    <string name="msg_fail_save_rfid_power_gain">Không thể lưu được mức công suất.</string>
    <string name="msg_fail_load_rfid_inventory_time">Không thể tải thời gian kiểm kê.</string>
    <string name="msg_fail_save_rfid_inventory_time">Không thể lưu thời gian kiểm kê.</string>
    <string name="msg_fail_load_rfid_idle_time">Không thể tải thời gian chờ.</string>
    <string name="msg_fail_save_rfid_idle_time">Không thể lưu thời gian chờ.</string>
    <string name="msg_fail_load_rfid_operation_time">Không thể tải thời gian hoạt động.</string>
    <string name="msg_fail_save_rfid_operation_time">Không thể lưu thời gian hoạt động.</string>
    <string name="msg_fail_load_rfid_auto_save_mode">Không thể tải chế độ lưu tự động.</string>
    <string name="msg_fail_save_rfid_auto_save_mode">Không thể lưu chế độ lưu tự động.</string>
    <string name="msg_fail_load_rfid_report_rssi">Không thể tải báo cáo rssi.</string>
    <string name="msg_fail_save_rfid_report_rssi">Không thể lưu báo cáo rssi.</string>
    <string name="msg_fail_load_rfid_current_link_profile">Không thể tải hồ sơ liên kết hiện tại.</string>
    <string name="msg_fail_save_rfid_current_link_profile">Không thể lưu hồ sơ liên kết hiện tại.</string>
    <string name="msg_fail_load_rfid_default_link_profile">Không thể tải hồ sơ liên kết mặc định.</string>
    <string name="msg_fail_save_rfid_default_link_profile">Không thể lưu hồ sơ liên kết mặc định.</string>
    <string name="msg_fail_load_rfid_select_mask">Không thể tải mặt nạ chọn.</string>
    <string name="msg_fail_save_rfid_select_mask">Không thể lưu mặt nạ chọn.</string>
    <string name="msg_fail_load_rfid_select_flag">Không thể tải cờ chọn.</string>
    <string name="msg_fail_save_rfid_select_flag">Không thể lưu cờ chọn.</string>
    <string name="msg_fail_load_rfid_session_target">Không thể tải phần đích</string>
    <string name="msg_fail_save_rfid_session_target">Không thể lưu phần đích</string>
    <string name="msg_fail_load_rfid_session_flag">Không thể tải phần cờ.</string>
    <string name="msg_fail_save_rfid_session_flag">Không thể lưu phần cờ.</string>
    <string name="msg_fail_load_rfid_algorithm">Không thể tải thuật toán.</string>
    <string name="bank">Ngân hàng</string>
    <string name="offset">Offset</string>
    <string name="length">Chiều dài</string>
    <string name="mask_target">Target</string>
    <string name="mask_action">Hoạt động</string>
    <string name="mask_pattern">Mẫu</string>
    <string name="bookland_isbn_format">Định dạng ISBN của Bookland</string>
    <string name="decode_upc_ean_jan_supplematals">Giải mã bổ sung UPC / EAN / JAN</string>
    <string name="upc_ean_jan_supplemental_redundancy">Dự phòng bổ sung UPC / EAN / JAN (2 đến 30)</string>
    <string name="upc_ean_jan_supplemental_aim_id_format">Định dạng ID bổ sung UPC / EAN / JAN</string>
    <string name="upc_reduced_quiet_zone">UPC Reduced Quiet Zone</string>
    <string name="transmit_upc_a_check_digit">Truyền số kiểm tra UPC-A</string>
    <string name="transmit_upc_e_check_digit">Truyền số kiểm tra UPC-E</string>
    <string name="transmit_upc_e1_check_digit">Truyền số kiểm tra UPC-E1</string>
    <string name="upc_a_preamble">Mở đầuUPC-A</string>
    <string name="upc_e_preamble">Mở đầu UPC-E</string>
    <string name="upc_e1_preamble">Mở đầu UPC-E1</string>
    <string name="convert_upc_e_to_upc_a">Chuyển đổi UPC-E to UPC-A</string>
    <string name="convert_upcd_e1_to_upc_a">Chuyển đổi UPC-E1 to UPC-A</string>
    <string name="ean8_jan8_extend">Mở rộng EAN-8/JAN-8</string>
    <string name="coupon_report">Báo cáo phiếu giảm giá</string>
    <string name="upca_check_digit">UPC-A Check Digit</string>
    <string name="upca_number_system">UPC-A Number System</string>
    <string name="upca_addenda_2_digit">UPC-A Addenda 2 Digit</string>
    <string name="upca_addenda_5_digit">UPC-A Addenda 5 Digit</string>
    <string name="upca_addenda_required">UPC-A Addenda Required</string>
    <string name="addenda_timeout">Addenda Timeout</string>
    <string name="upca_addenda_separator">UPC-A Addenda Separator</string>
    <string name="convert_upca_to_ean13">Convert UPC-A to EAN-13</string>
    <string name="ean_jan13_check_digit">EAN/JAN-13 Check Digit</string>
    <string name="ean_jan13_addenda_2_digit">EAN/JAN-13 Addenda 2 Digit</string>
    <string name="ean_jan13_addenda_5_digit">EAN/JAN-13 Addenda 5 Digit</string>
    <string name="ean_jan13_addenda_required">EAN/JAN-13 Addenda Required</string>
    <string name="ean_jan13_addenda_separator">EAN/JAN-13 Addenda Separator</string>
    <string name="isbn_translate">ISBN Translate</string>
</resources>